--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "mocha"
+    "test": "npx wdio run ./wdio.conf.js"
   },
   "repository": {
     "type": "git",
