--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "test": "test"
   },
   "dependencies": {
+    "@wdio/cli": "^7.0.7"
+  },
+  "devDependencies": {
+    "@wdio/junit-reporter": "^7.0.7",
+    "@wdio/local-runner": "^7.0.7",
+    "@wdio/mocha-framework": "^7.0.7",
+    "@wdio/spec-reporter": "^7.0.7",
+    "@wdio/sync": "^7.0.7",
     "chromedriver": "^88.0.0",
     "wdio-chromedriver-service": "^6.0.4"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "npx wdio run ./wdio.conf.js"
   },
